force-app/main/default/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Default Support Process</fullName>
        <description>A default support process for Case management</description>
        <isActive>true</isActive>
        <values>
            <fullName>Done</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Testing</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>To Do</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval_Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Resolution_Time_Hours__c</fullName>
        <formula>(ClosedDate - CreatedDate) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Resolution Time (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Name_Text__c</fullName>
        <formula>Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <recordTypes>
        <fullName>Bug_Report</fullName>
        <active>true</active>
        <businessProcess>Default Support Process</businessProcess>
        <label>Bug Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Change_Request</fullName>
        <active>true</active>
        <businessProcess>Default Support Process</businessProcess>
        <label>Change Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Development_Task</fullName>
        <active>true</active>
        <businessProcess>Default Support Process</businessProcess>
        <label>Development Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Support_Request</fullName>
        <active>true</active>
        <businessProcess>Default Support Process</businessProcess>
        <label>Support Request</label>
    </recordTypes>
</CustomObject>